# hydra-project

./: .gitignore  data_modules.py  models.py  pyproject.toml  tasks.py  train.py
config_schemas/: config_schema.py  data_module_schema.py  task_schema.py  trainer_schema.py
config_schemas/task/: loss_function_schema.py  model_schema.py  optimizer_schema.py
config_schemas/task/model/: adapter_schema.py  backbone_schema.py  head_schema.py
configs/data_module/: cifar10.yaml  mnist.yaml
configs/task/: cifar10_classification.yaml  mnist_classification.yaml
configs/task/loss_function/: cross_entropy.yaml
configs/task/model/: cifar10_model.yaml  simple_model.yaml
configs/task/model/adapter/: linear_2048_10.yaml  linear_512_10.yaml
configs/task/model/backbone/: resnet18.yaml  resnet34.yaml  resnet50.yaml
configs/task/model/head/: identity_head.yaml
configs/task/optimizer/: adam.yaml  sgd.yaml
configs/trainer/: cpu.yaml  gpu.yaml
